[package]
name = "phoenix-common"
version = "0.4.0"
edition = "2021"
resolver = "2"
repository = "https://github.com/TonyZhang2004/phoenix-v1"
authors = ["Ellipsis Labs <maintainers@ellipsislabs.xyz>"]
description = "On-chain order book that atomically settles trades"
license-file = "LICENSE"
# The historical integration harness is tied to the Solana 1.14 deployment
# toolchain and remains reproducible from the phnx-mainnet-2026-07-17 tag.
autotests = false

[lib]
crate-type = ["cdylib", "lib"]
name = "phoenix"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[profile.release]
lto = "fat"
codegen-units = 1
overflow-checks = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("custom-heap", "custom-panic"))',
] }

[dependencies]
shank = "0.0.12"
spl-token = { version = "8", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "7", features = ["no-entrypoint"] }
solana-program = "2"
borsh = "0.10"
bytemuck = "1.13.0"
lib-sokoban = "0.3.0"
num_enum = "0.5.9"
itertools = "0.10.5"
thiserror = "1.0.38"
ellipsis-macros = "0.3.0"
solana-security-txt = "1.1.0"
static_assertions = "1.1.0"

[dev-dependencies]
rand = "0.7.3"
